--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                   <li>
-                    <a href="/Signup">Sign Up</a>
+                    <a href="Signup">Sign Up</a>
                   </li>
                 </ul>
             </div>
