--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Brian</title>
-
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/mine.css">
 
@@ -38,16 +38,19 @@
                         <a href="/">Home</a>
                     </li>
                     <li>
-                        <a href="About">About</a>
+                        <a href="/Borrow">Borrow</a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="/Lend" >Lend</a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                  <li>
-                    <a href="Signup">Sign Up</a>
-                  </li>
+                <li>
+                    <a href="/MyLoans">My Loans</a>
+                </li>
+                <li>
+                    <a href="/Signup">Sign Up</a>
+                </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -56,7 +59,8 @@
     </nav>
     <div class="container" id="container">
     </div>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="/app.js"></script>
   </body>
 </html>
